--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -40,7 +40,7 @@ jobs:
             
             # Run Black for code formatting
             echo "#### Black (Code Formatting)" >> quality_report.md
-            echo '```' >> quality_report.md
+            echo '```
             if black --check --diff .; then
               echo "✅ Code formatting is consistent with Black standards" >> quality_report.md
               echo "BLACK_PASSED=true" >> $GITHUB_ENV
@@ -54,7 +54,7 @@ jobs:
             
             # Run Ruff for fast Python linting
             echo "#### Ruff (Fast Python Linter)" >> quality_report.md
-            echo '```' >> quality_report.md
+            echo '```
             if ruff check .; then
               echo "✅ No issues found by Ruff" >> quality_report.md
               echo "RUFF_PASSED=true" >> $GITHUB_ENV
@@ -68,7 +68,7 @@ jobs:
             
             # Run MyPy for type checking
             echo "#### MyPy (Type Checking)" >> quality_report.md
-            echo '```' >> quality_report.md
+            echo '```
             if mypy . --ignore-missing-imports; then
               echo "✅ Type checking passed" >> quality_report.md
               echo "MYPY_PASSED=true" >> $GITHUB_ENV
@@ -80,7 +80,29 @@ jobs:
             echo '```' >> quality_report.md
           } || true
 
-      # Note: .openhands_instructions file should exist in the repository root
+      - name: Create OpenHands instructions
+        run: |
+          cat > .openhands_instructions << 'EOL'
+          # OpenHands Code Quality Review Instructions
+
+          **Role:** You are a senior code quality analyst responsible for evaluating pull requests.
+
+          **Task:** Review the code changes and quality check results to determine if the PR meets our standards.
+
+          **Code Quality Standards:**
+          1. Code follows consistent naming conventions and style guidelines
+          2. No code smells or anti-patterns are present
+          3. Functions and classes are well-documented with clear purpose
+          4. Code is DRY (Don't Repeat Yourself) and follows SOLID principles
+          5. All automated quality checks (Black, Ruff, MyPy) must pass
+          6. No security vulnerabilities or performance bottlenecks
+          7. Tests are present for new functionality (if applicable)
+
+          **Response Format:**
+          - Output exactly "GOOD" if the code meets ALL standards
+          - Output exactly "BAD" if ANY standard is not met
+          DO NOT provide explanations or suggestions - only output GOOD or BAD
+          EOL
 
       - name: Run OpenHands Review
         id: openhands_review
@@ -91,35 +113,27 @@ jobs:
           LLM_MODEL: "claude-3-5-sonnet-20241022"
           LOG_ALL_EVENTS: "true"
         run: |
-          # Verify .openhands_instructions exists
-          if [ ! -f ".openhands_instructions" ]; then
-            echo "Error: .openhands_instructions file not found in repository"
-            exit 1
-          fi
-          
-          # Run OpenHands review in headless mode
-          review_output=$(python -m openhands.core.main \
-            -t "Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD." \
-            --eval-output-dir ./eval_output \
-            -i 50 \
-            -b 50 \
-            --eval-n-limit 50 \
-            --eval-num-workers 1 2>&1 || true)
-          
+          # Construct the OpenHands command
+          openhands_command="python -m openhands.core.main -t 'Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD.'"
+
+          # Run OpenHands review and save output
+          # Redirect stderr to stdout to capture everything
+          review_output=$(timeout 300s eval $openhands_command 2>&1 || true)
+
           # Save the output for debugging
           echo "$review_output" > openhands_output.txt
-          
+
           # Debug: Show the full output
           echo "Full OpenHands output:"
           echo "$review_output"
           echo "---"
-          
+
           # Get the last line of output and check if it's GOOD or BAD
           result=$(echo "$review_output" | tail -n1 | grep -E '^(GOOD|BAD)$' || echo "BAD")
           echo "Extracted result: $result"
-          
+
           echo "OpenHands result: $result"
-          
+
           if [ "$result" = "GOOD" ]; then
             echo "OPENHANDS_PASSED=true" >> $GITHUB_ENV
           else
@@ -152,21 +166,12 @@ jobs:
           fi
           
           # If we get here, all automated checks passed, now check OpenHands result
-          # Get the last line of output and check if it's GOOD or BAD
-          OPENHANDS_RESULT=$(cat openhands_output.txt | tail -n1 | grep -E '^(GOOD|BAD)$' || echo "BAD")
-          echo "Final OpenHands result: $OPENHANDS_RESULT"
-          
-          if [ "$OPENHANDS_RESULT" = "GOOD" ]; then
+          if [ "$OPENHANDS_PASSED" = "true" ]; then
             gh pr comment "${{ github.event.pull_request.number }}" --body "✅ **Code Quality Review Passed**
 
             All automated checks and OpenHands review passed. Auto-merging PR.
 
-            $QUALITY_REPORT
-
-            OpenHands Review Output:
-            \`\`\`
-            $(cat openhands_output.txt || echo "No output available")
-            \`\`\`"
+            $QUALITY_REPORT"
             
             gh pr review "${{ github.event.pull_request.number }}" --approve -b "All code quality standards met."
             
@@ -178,13 +183,7 @@ jobs:
 
             While automated checks passed, OpenHands AI review found quality issues. Please review your code for potential improvements.
 
-            $QUALITY_REPORT
-
-            OpenHands Review Output:
-            \`\`\`
-            $(cat openhands_output.txt || echo "No output available")
-            \`\`\`"
+            $QUALITY_REPORT"
             
             gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met according to OpenHands AI review."
-            exit 1
           fi
