--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -11,7 +11,7 @@ jobs:
       contents: write
       pull-requests: write
       issues: write
-      packages: read  # Required for Docker setup
+      packages: read
 
     steps:
       - name: Checkout code
@@ -19,14 +19,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Docker
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
+      - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Set up Docker
         uses: docker/setup-docker-action@v3
         with:
           docker-buildx-version: latest
 
-      - name: Set up Python (for code quality tools)
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
@@ -70,10 +74,8 @@ jobs:
           WORKSPACE_BASE: ${{ github.workspace }}
           LLM_MODEL: "anthropic/claude-3-5-sonnet-20241022"
         run: |
-          # Generate task instruction
           TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD."
 
-          # Run OpenHands in Docker
           docker run --rm \
             -e SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.all-hands.dev/all-hands-ai/runtime:0.24-nikolaik \
             -e SANDBOX_USER_ID=$(id -u) \
@@ -94,7 +96,6 @@ jobs:
             -b 50 \
             --eval-n-limit 50 > openhands_output.log
 
-          # Process results
           if grep -q "GOOD" openhands_output.log; then
             echo "OPENHANDS_PASSED=true" >> $GITHUB_ENV
           else
