--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -12,6 +12,7 @@ jobs:
       pull-requests: write
       issues: write
       packages: read
+      actions: read
 
     steps:
       - name: Checkout code
@@ -73,12 +74,18 @@ jobs:
         env:
           WORKSPACE_BASE: ${{ github.workspace }}
           LLM_MODEL: "anthropic/claude-3-5-sonnet-20241022"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Create state directory with proper permissions
           mkdir -p ${GITHUB_WORKSPACE}/.openhands-state
           chmod -R 777 ${GITHUB_WORKSPACE}/.openhands-state
 
-          TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD."
+          # Get PR details via GitHub API
+          PR_FILES=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files")
+
+          TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD. PR changes: $PR_FILES"
 
           docker run --rm \
             --user root \
