--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -76,17 +76,18 @@ jobs:
           LLM_MODEL: "anthropic/claude-3-5-sonnet-20241022"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Create state directory with proper permissions
+          # Setup environment
           mkdir -p ${GITHUB_WORKSPACE}/.openhands-state
           chmod -R 777 ${GITHUB_WORKSPACE}/.openhands-state
 
-          # Get PR details via GitHub API
+          # Get PR details
           PR_FILES=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files")
 
-          TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD. PR changes: $PR_FILES"
+          TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output EXACTLY 'GOOD' or 'BAD'. PR changes: $PR_FILES"
 
+          # Run OpenHands in CI mode
           docker run --rm \
             --user root \
             -e SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.all-hands.dev/all-hands-ai/runtime:0.24-nikolaik \
@@ -102,13 +103,15 @@ jobs:
             docker.all-hands.dev/all-hands-ai/openhands:0.24 \
             python -m openhands.core.main \
             -t "$TASK_INSTRUCTION" \
+            --non-interactive \
             --eval-output-dir ./eval_output \
             --no-auto-continue \
             -i 50 \
             -b 50 \
             --eval-n-limit 50 > openhands_output.log
 
-          if grep -q "GOOD" openhands_output.log; then
+          # Strict result parsing
+          if grep -qx "GOOD" openhands_output.log; then
             echo "OPENHANDS_PASSED=true" >> $GITHUB_ENV
           else
             echo "OPENHANDS_PASSED=false" >> $GITHUB_ENV
@@ -119,7 +122,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           QUALITY_REPORT=$(cat quality_report.md)
-          OPENHANDS_LOG=$(cat openhands_output.log || echo "No OpenHands log")
+          OPENHANDS_LOG=$(cat openhands_output.log || echo "No OpenHands log available")
 
           if [ "$BLACK_PASSED" != "true" ] || [ "$RUFF_PASSED" != "true" ] || [ "$MYPY_PASSED" != "true" ]; then
             gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **Code Quality Review Failed**
